--- a/scss/_custom-settings.scss
+++ b/scss/_custom-settings.scss
@@ -31,11 +31,11 @@
 // Variables
 $font-primary: 'Open Sans', Arial, sans-serif;
 $font-secondary: 'Open Sans', Arial, sans-serif;
-$brand-primary: #1a57a5;
-$brand-secondary: #fd9025;
+$brand-primary: #eb586f;
+$brand-secondary: #9e3149;
 $brand-black: #000000;
 $brand-white: #ffffff;
-$brand-dropdown: #85C8DD;
+$brand-dropdown: #9e807a;
 
 $screen-lg: 1200px;
 $screen-md: 992px;
