--- a/scss/style.scss
+++ b/scss/style.scss
@@ -434,7 +434,7 @@ a {
 .probootstrap-hero {
 	background-color: #ccc;
 	background-size: cover;
-	background-position: left top;
+	background-position: center top;
 	padding: 9em 0 15em 0;
 	position: relative;
 	overflow: hidden;
