--- a/scss/style.scss
+++ b/scss/style.scss
@@ -693,8 +693,10 @@ a {
 	&.btn-primary {
 		border: 2px solid $brand-primary;
 		background: $brand-primary;
-		&:hover, &:focus {
-			background: darken($brand-primary, 20%);
+		&:hover, &:focus, &:active {
+			background: $brand-primary;
+			border-color: $brand-primary;
+			color: black;
 		}
 	}
 	&.btn-black {
@@ -708,8 +710,10 @@ a {
 		color: $brand-primary;
 		border: 2px solid $brand-primary;
 		background: none;
-		&:hover, &:focus {
-			color: darken($brand-primary, 20%);
+		&:hover, &:focus, &:active {
+          background: $brand-primary;
+          border-color: $brand-primary;
+          color: black;
 		}
 	}
 
