--- a/scss/style.scss
+++ b/scss/style.scss
@@ -537,6 +537,15 @@ a {
 			color: rgba(255,255,255,.7);
 		}
 	}
+	//map
+	&.map {
+		padding: 0;
+		iframe {
+			display: block;
+			width: 100%;
+			height: 300px;
+		}
+	}
 }
 .probootstrap-footer {
 	padding: 3em 0;
